--- a/provas/src/main/resources/application.yaml
+++ b/provas/src/main/resources/application.yaml
@@ -1,31 +1,19 @@
 spring:
-   application:
+  application:
     name: crud
 
-datasource:
-      url: jdbc:h2:mem:banco_prova
-      driver-class-name: org.h2.Driver
-      username: sa
-      password:
+  datasource:
+    url: jdbc:mariadb://localhost:3306/banco_prova
+    username: root
+    password: 
+    driver-class-name: org.mariadb.jdbc.Driver
 
-      jpa:
-       database-platform: org.hibernate.dialect.H2Dialect
-       hibernate:
-        ddl-auto: update
-        show-sql: true
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.MariaDBDialect
 
-      h2:
-      console:
-        enabled: true
-        path: /h2-console
-      spring:
-      datasource:
-       url: jdbc:mariadb://localhost:3306/banco_prova
-       username: root
-       password:
-       driver-class-name: org.mariadb.jdbc.Driver
-
-      jpa:
-       hibernate:
-         ddl-auto: update
-         database-platform: org.hibernate.dialect.MariaDBDialect
+  h2:
+    console:
+      enabled: false  # Desabilitado, já que você está usando MariaDB
